Bug #169094.  Regression: " In Composer(edit html),Insert image,link and table not work."  Patch from robin.lu@sun.com.  Not part of the default build.